...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.widget.Button
                    android:id="@+id/btnSMS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="TEXT US"
                    android:background="@drawable/button_rectangle"
                    android:textColor="@color/black"
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.widget.Button
                    android:id="@+id/btnCall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/button_rectangle"
                    android:text="CALL US"
                    android:textColor="@color/black"
...
